--- a/styles.css
+++ b/styles.css
@@ -3,42 +3,39 @@ body {
     display: flex;
     margin: 0;
     height: 100vh;
+    -webkit-touch-callout: none; /* iOS Safari */
+    -webkit-user-select: none; /* Safari */
+    -khtml-user-select: none; /* Konqueror HTML */
+    -moz-user-select: none; /* Old versions of Firefox */
+    -ms-user-select: none; /* Internet Explorer/Edge */
+    user-select: none; /* Non-prefixed version, currently  supported by Chrome, Opera and Firefox */
 }
 
 #container {
     font-family:'Raleway', sans-serif;
-    /* display: grid; */
-    /* grid-template-columns: repeat(1, 1fr); */
-    /* grid-template-rows: minmax(150px, auto); */
-    /* grid-template-areas: 
-        "header header" /* The grid-template is used from the grid-area: name in the containers*/
-        /*"img login"; */
     color: black;
     flex-direction: row;
     justify-content: center;
     align-items: center;
     align-content: center;
     width: 50%;
-
 }
 
 #headerContainer {
     width: 80%;
     background-color: #637DFF;
     text-align: center;
-
 }
 
 header {
     width: 600px;
-    font-size: 65px;
+    font-size: 55px;
     color: white;
     word-wrap: break-word;
     padding: 0px;
-    /* margin: 45px 50px; */
     height: auto;
     text-align: center;
-    margin-top: 5%;
+    margin-top: 15%;
     margin-left: 15%;
 }
 
@@ -47,12 +44,12 @@ header {
     width: 450px;
     text-align: center;
     margin: 50px;
-    margin-top: 35%;
+    margin-top: 40%;
     align-items: center;
 }
 
 img {
-    width: 90%;
+    width: 70%;
     margin: 50px;
     grid-area: img;
     text-align: center;
@@ -100,7 +97,6 @@ button {
 button:hover {
     background-color: #637DFF;
     color: white;
-    /* font-size: ; */
     transform: scale(1.1);
 }
 
