--- a/styles.css
+++ b/styles.css
@@ -44,7 +44,7 @@ header {
     width: 450px;
     text-align: center;
     margin: 50px;
-    margin-top: 40%;
+    margin-top: 28%;
     align-items: center;
 }
 
@@ -69,7 +69,7 @@ label {
     padding: 10px;
 }
 
-input{
+input {
     background-color: white;
     width: 310px;
     height: 25px;
@@ -78,9 +78,16 @@ input{
     border-radius: 5px;
     padding: 5px 10px;
     margin: 0px;
-    font-size: 20px;
+    font-size: 18px;
     outline: none;
+    font-family: 'Raleway', sans-serif;
 }
+
+#name:valid {
+    border-color: green;
+}
+
+
 
 button {
     width: 150px;
