--- a/portal.css
+++ b/portal.css
@@ -134,12 +134,13 @@ p {
 }
 
 .carouselTrack {
-    background-color: rgb(221, 220, 220);
     width: 400px;
+    height: 150px;
     padding: 0;
     list-style: none;
     margin: 0 30px 10px;
     border-radius: 4px;
+    position: relative;
 }
 
 .carouselSlide {
@@ -149,6 +150,15 @@ p {
     justify-content: space-evenly;
     align-items: center;
     height: 125px;
+    position: absolute;
+    background-color: rgb(221, 220, 220);
+    left: -1000px;
+}
+
+.currentCarouselSlide {
+    left: 0px;
+    margin: 5px;
+    top: 20px;
 }
 
 .carouselNav {
@@ -156,9 +166,10 @@ p {
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-top: 15px;
 }
 
-.cNavIndicators {
+.carouselNavCircles {
     height: 20px;
     width: 20px;
     background-color: lightgrey;
@@ -168,11 +179,11 @@ p {
     margin-left: 12px;
 }
 
-.currentSlide {
+.currentSlideCircle {
     background-color: rgb(114, 113, 113);
 }
 
-.cNavIndicators:hover {
+.carouselNavCircles:hover {
     background-color: rgb(114, 113, 113);
     cursor: pointer;
 }
