--- a/portal.css
+++ b/portal.css
@@ -139,7 +139,6 @@ p {
     padding: 0;
     list-style: none;
     margin: 0 30px 10px;
-    border-radius: 4px;
     position: relative;
 }
 
@@ -159,6 +158,7 @@ p {
     left: 0px;
     margin: 5px;
     top: 20px;
+    border-radius: 4px;
 }
 
 .carouselNav {
@@ -199,6 +199,7 @@ p {
 .carouselButton:hover {
     color: rgb(65, 65, 65);
     cursor: pointer;
+    transform: scale(1.2);
 }
 
 .fa-js-square {
