--- a/portal.css
+++ b/portal.css
@@ -22,10 +22,6 @@ header {
     font-weight: bolder;
 }
 
-#navContainer {
-    /* background-color: #637DFF; */
-}
-
 #ulNav {
     list-style-type: none; /* Removes bullet points */
     margin: 0; /* Removes default settings */
@@ -42,7 +38,7 @@ header {
     left: 10%;
 }
 
-a {
+.navLink {
     display: block;
     padding: 25px 0px ;
     width: 100%;
@@ -52,8 +48,9 @@ a {
     margin: 0px 40px ;
 }
 
-a:hover {
-    background-color: rgb(67, 85, 175);
+.navLink:hover {
+    background-color: rgb(0, 42, 255);
+    border-radius: 4px;
 }
 
 #fullContainer {
@@ -64,45 +61,43 @@ a:hover {
     margin: 20px 160px;
 }
 
-
 h1 {
-    font-style: italic;
     font-size: 30px;
     text-align: justify;
 }
 
-
 #skillsContainer {
     display: grid;
-    grid-template-columns: repeat(2, 400px);
-    grid-auto-rows: repeat(3, 150px);
+    grid-template-columns: repeat(2, minmax(400px, auto));
+    grid-auto-rows: minmax(150px, auto);
     justify-content: center;
     align-items: stretch;
     justify-items: center;
-    gap: 30px;
+    grid-column-gap: 0;
+    grid-row-gap: 30px;
     background-color: #637DFF;
     overflow: visible;
-    padding-bottom: 60px;
+    /* padding-bottom: 60px; */
     border-radius: 4px;
 }
 
 .divSkill {
     margin: 15px;
     cursor: pointer;
+    padding: 20px;
 }
 
 .skillsPara {
     height: 240px;
+    /* padding-bottom: 60px; */
+    margin-top: 0;
+    font-size: 20px;
 }
 
 h3 {
     margin-bottom: 5px;
     border-bottom: 2px solid black;
     font-size: 24px;  
-}
-
-.divSkill:hover {
-    transform: scale(1.1);
 }
 
 h2 {
@@ -117,9 +112,7 @@ p {
     padding: 10px;
 }
 
-
 /* Carousel CSS  for languages*/
-
 #langWrapper {
     display: flex;
     justify-content: center;
@@ -202,6 +195,7 @@ p {
     transform: scale(1.2);
 }
 
+/* CSS for the icons */
 .fa-js-square {
     color: yellow;
     opacity: 0.7;
@@ -215,4 +209,17 @@ p {
 .fa-css3-alt {
     color: blue;
     opacity: 0.7;
+}
+
+/* CSS for the projects section */
+
+#gitHub {
+    color: #637DFF;
+    text-decoration: none;
+}
+
+#gitHub:hover {
+    color: rgb(0, 42, 255);
+    text-decoration: underline;
+
 }
