--- a/portal.css
+++ b/portal.css
@@ -7,8 +7,10 @@ body {
     -moz-user-select: none; /* Old versions of Firefox */
     -ms-user-select: none; /* Internet Explorer/Edge */
     user-select: none; /* Non-prefixed version, currently  supported by Chrome, Opera and Firefox */
+    box-sizing: border-box;
 }
 
+/* CSS for the header and nav links */
 #headerContainer {
     margin: 0;
     background-color: #637DFF;
@@ -66,31 +68,6 @@ h1 {
     text-align: justify;
 }
 
-#skillsContainer {
-    display: grid;
-    grid-template-columns: repeat(2, minmax(100px, auto));
-    grid-auto-rows: repeat(3, minmax(150px, auto));
-    justify-content: center;
-    align-items: stretch;
-    justify-items: center;
-    grid-gap: 0;
-    background-color: #637DFF;
-    overflow: visible;
-    /* padding-bottom: 60px; */
-    border-radius: 4px;
-}
-
-.divSkill {
-    margin: 10px;
-    cursor: pointer;
-    padding: 20px;
-}
-
-.skillsPara {
-    margin-top: 0;
-    font-size: 20px;
-}
-
 h3 {
     margin-bottom: 5px;
     border-bottom: 2px solid black;
@@ -108,6 +85,32 @@ p {
     font-size: 22px;
     padding: 10px;
 }
+
+/* CSS for Skills grid */
+#skillsContainer {
+    display: grid;
+    grid-template-columns: repeat(2, minmax(100px, auto));
+    grid-auto-rows: repeat(3, minmax(150px, auto));
+    justify-content: center;
+    align-items: stretch;
+    justify-items: center;
+    grid-gap: 0;
+    background-color: #637DFF;
+    overflow: visible;
+    border-radius: 4px;
+}
+
+.divSkill {
+    margin: 10px;
+    cursor: pointer;
+    padding: 20px;
+}
+
+.skillsPara {
+    margin-top: 0;
+    font-size: 20px;
+}
+
 
 /* Carousel CSS  for languages*/
 #langWrapper {
@@ -220,3 +223,49 @@ p {
     text-decoration: underline;
 }
 
+#projectContainer {
+    display: grid;
+    grid-gap: 30px;
+    grid-template-columns: repeat(5, 150px);
+    grid-template-rows: repeat(5, 150px);
+    justify-content: center;
+    align-items: center;
+    justify-items: center;
+    background-color: none;
+    border-radius: 4px;
+    padding-top: 40px;
+    padding-bottom: 40px;
+    grid-template-areas: 
+        "calculator calculator TicTacToe TicTacToe TicTacToe"
+        "calculator calculator TicTacToe TicTacToe TicTacToe"
+        "calculator calculator TicTacToe TicTacToe TicTacToe"
+        "EtchASketch EtchASketch MortCalculator MortCalculator MortCalculator"
+        "EtchASketch EtchASketch MortCalculator MortCalculator MortCalculator"
+    ;
+}
+
+.projectImg {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+/* calculator */
+#img1 { 
+    grid-area: calculator;
+}
+
+/* Mortgage calculator */
+#img3 {
+    grid-area: MortCalculator;
+}
+
+/* EtchASketch */
+#img2 {
+    grid-area: EtchASketch;
+}
+
+/* Tic Tac Toe */
+#img4 {
+    grid-area: TicTacToe;
+}
