--- a/portal.css
+++ b/portal.css
@@ -10,7 +10,7 @@ body {
     box-sizing: border-box;
 }
 
-/* CSS for the header and nav links */
+/* CSS for the header */
 #headerContainer {
     margin: 0;
     background-color: #637DFF;
@@ -24,6 +24,38 @@ header {
     font-weight: bolder;
 }
 
+/* Footer */
+
+#footerContainer{ 
+    margin: 0;
+    background-color: #637DFF;
+    padding: 50px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+footer {
+    color: white;
+    font-size: 55px;
+    font-weight: bolder;
+    width: 400px;
+    text-align: justify;
+    margin-left: 170px;
+}
+
+.footerLink, #Contact, #attribution {
+    color: white;
+}
+
+#attribution {
+    font-size: 18px;
+    width: 200px;
+    margin: 110px;
+    color: white;
+}
+
+/* CSS for nav links */
 #ulNav {
     list-style-type: none; /* Removes bullet points */
     margin: 0; /* Removes default settings */
@@ -53,6 +85,8 @@ header {
 .navLink:hover {
     background-color: rgb(0, 42, 255);
     border-radius: 4px;
+    opacity: 0.6;
+    transition: 0.5s;
 }
 
 #fullContainer {
@@ -84,6 +118,7 @@ h2 {
 p {
     font-size: 22px;
     padding: 10px;
+    text-align: justify;
 }
 
 /* CSS for Skills grid */
@@ -109,6 +144,7 @@ p {
 .skillsPara {
     margin-top: 0;
     font-size: 20px;
+    text-align: justify;
 }
 
 
